	  + The delete option should be removed
	+ AJAXified image upload system to avoid confusion about whether an image is
	  uploaded or not
	+ Use AniDB's daily title dump and implement a search feature to add
	  anime relations without having to visit AniDB.

1.17 - 2008-05-23
	- Added PS3 and Xbox 360 to platforms
	- Relation graph generation improvements: Unicode, anti-aliassing, async

1.16 - 2008-05-22
	- Release dates in the current year or month without a specified day will
	  be considered as not yet released
	- Added platform and language icons to the VN browser
	- Grouped producers, user stats and general information on the VN page
	- Added language icons to producer browser
	- A little CSS cleanup
	- Grouped category browser and search into one advanced search
	- Updated sitemap generator
	- Pattern matching bug fixes in Multi::IRC, and better handling of commands
	- Added .xml extention to all RSS URLs

1.15 - 2008-05-04
	- Relation graph now also updated on VN title change
	- Anime relations
	- [js] Position of the dropdown box is now relative to the link element
	- Used inline-block for icon image sprites (to avoid stupid float hacks)
	- Used icons to indicate the release status type on VN pages
	- Give a 'not logged in' dropdown edit box when the user isn't logged in
	- Fixed the redirects for old URLs
	- Designed a better system to handle documentation
	- Created a centralised system for site errors within the same layout
	- Wrote some more documentation
	- Multi::IRC now also handles d[0-9] IDs
	- Multi::Maintenance automatically rotates Multi's logs

1.14 - 2008-04-26
	- Removed the ID gap prevention method
	- Moved static content to static.vndb.org (and rely on lighty for js/css
	  compression)
	- relation graphs and cover images now get an ID instead of MD5-sum
	- Added Nintendo Wii to platforms
	- Added 'hidden' flag, which should now be used instead of the delete option
	- Fixed the ordering of nodes in the relation graphs