@@ -14,6 +14,9 @@ TODO:
 1.17 - 2008-05-23
 	- Added PS3 and Xbox 360 to platforms
 	- Relation graph generation improvements: Unicode, anti-aliassing, async
+	- Removed all passwords from the main code, and created a seperate config
+		file to override all options - not available on SVN
+	- Dynamic loading, several bugfixes, and code cleanup for Multi
 
 1.16 - 2008-05-22
 	- Release dates in the current year or month without a specified day will
